--- a/UORespawnApp/Components/Controls/SpawnPacksComponent.razor
+++ b/UORespawnApp/Components/Controls/SpawnPacksComponent.razor
@@ -121,6 +121,12 @@
                             </div>
                             <div class="col-6">
                                 <div class="stat-tile">
+                                    <span class="stat-label">Vendor Spawns</span>
+                                    <span class="stat-value">@SelectedPack.Stats.VendorSpawnCount</span>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="stat-tile">
                                     <span class="stat-label">Maps</span>
                                     <span class="stat-value">@SelectedPack.Stats.MapCount</span>
                                 </div>
@@ -129,12 +135,6 @@
                                 <div class="stat-tile">
                                     <span class="stat-label">Entries</span>
                                     <span class="stat-value">@SelectedPack.Stats.TotalSpawnEntries</span>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="stat-tile">
-                                    <span class="stat-label">Unique Mobs</span>
-                                    <span class="stat-value">@SelectedPack.Stats.UniqueCreatureCount</span>
                                 </div>
                             </div>
                         </div>
